--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.7.11'
 
       - name: Install Requirements
-        run:  pip install flask pytest flask-wtf
+        run:  pip install flask pytest flask-wtf tox
 
       - name: Unit Test
         run: python -m unittest -v test
@@ -32,6 +32,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      
+      - name: Install Requirements
+        run:  pip install tox pytest
+
+      - name: Run tox
+        run: tox -e py
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
