--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,3 +15,8 @@ sonar.language=py
 sonar.python.version=3.8
 
 sonar.qualitygate.wait=true
+ 
+sonar.tests=test.py
+ 
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=__mocks__/**,src/types/**
