--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,11 @@
 [tox]
-envlist = py38
+envlist = py39
 skipsdist = True
  
 [testenv]
 deps =
     pytest
     coverage
-commands =
-    coverage run -m pytest
-    coverage xml
+commands = pytest --cov=app test.py --cov-report=xml --cov-config=tox.ini --cov-branch
  
 [coverage:run]
-relative_files = True
-source = app
-branch = True
