--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ deps =
     pytest
     coverage
     pytest-cov
-commands = pytest --cov=app --cov-report=xml --cov-config=tox.ini --cov-branch
+commands = pytest --cov=app.py --cov-report=xml --cov-config=tox.ini --cov-branch
  
 [coverage:run]
