--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ deps =
     pytest
     coverage
     pytest-cov
-commands = pytest --cov app 
+commands = pytest --cov app test.py
  
 [coverage:run]
