--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps =
     pytest
     coverage
     pytest-cov
-commands = pytest --cov app test.py
+    flask
+commands = pytest --cov app test
  
 [coverage:run]
