--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     coverage
     pytest-cov
     flask
-commands = pytest --cov app test.py
+    flask_wtf
+commands = pytest --cov app app_test.py
  
 [coverage:run]
