--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,6 @@ deps =
     pytest-cov
     flask
     flask_wtf
-commands = pytest --cov app app_test.py --cov-report xml
+commands = pytest --cov app test_app.py --cov-report xml
  
 [coverage:run]
