--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Unit Test
-        run: python -m unittest -v discover -p "test_*.py"
+        run: python -m unittest discover -p "test_*.py"
 
   SonarCloud:
       name: SonarCloud
