--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,6 +53,10 @@ jobs:
       steps: 
         - name: Checkout Repo
           uses: actions/checkout@v2
+
+        - name: New Relic License
+          run: |
+             sed -i "s/licensekey/${{ secrets.NEW_RELIC_LICENSE_KEY }}/g" Dockerfile
         
         - name: Login to Heroku Container registry
           env: 
