--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -88,6 +88,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+
+
       - name: Deploy Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
